# geneforce

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
core/: Cargo.toml
core/src/: crossbreed.rs  gene.rs  lib.rs  plant.rs  solver.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  vite-env.d.ts
web/src/components/: FormModal.tsx  GeneBox.tsx  OptionsPanel.tsx  PlantInput.tsx  ResultCard.tsx  TargetPanel.tsx  TwoStepCard.tsx
web/src/lib/: breeder.ts  forms.ts  types.ts
web/src/styles/: index.css
