[package]
name = "geneforge_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Versiones fijadas para compatibilidad con rustc 1.75 del sandbox de verificación.
# En la máquina del usuario (rustc moderno) pueden actualizarse sin cambios de código.
[dependencies]
geneforge_core = { path = "../core", default-features = false }
wasm-bindgen = "=0.2.92"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
serde-wasm-bindgen = "=0.6.5"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
